kubernetes/apps/signalk/base/signalk-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signalk
  labels:
    app: signalk
