kubernetes/apps/signalk/base/signalk-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: signalk
  name: signalk
  namespace: signalk
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: signalk
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: signalk
    spec:
      containers:
        - image: signalk/signalk-server:latest
          imagePullPolicy: Always
          name: signalk
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /home/node/.signalk
              name: home-node-dotsignalk
      restartPolicy: Always
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
        - name: home-node-dotsignalk
          persistentVolumeClaim:
            claimName: signalk-pvc
